// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppListingTab should match a snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <p
        class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
      >
        The detail included on this page populates your app listing in the AppMarket. While you are in development, you can complete this in your own time however, when you are ready to submit your app for approval, it all needs to be completed.
      </p>
      <p
        class="e11jaxfn-el-has-grey-text etrchfm-el-has-section-margin e1wasvgh-el-body-text"
      >
        For information on listing your app 
        <a>
          see here
        </a>
        . If you are looking for guidance on what we look for when reviewing app, there is a dedicated page
         
        <a>
          here.
        </a>
      </p>
      <div
        class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
      >
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="name"
              placeholder="The name of your app as it will appear to users"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Name
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="supportEmail"
              placeholder="Email for customers to contact you"
              type="email"
              value="Mock field value"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Support email
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="telephone"
              placeholder="Number for customers to contact you"
              type="text"
              value="Mock field value"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Telephone
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="homePage"
              placeholder="Your company homepage. HTTP:// or HTTPS://"
              type="text"
              value="Mock field value"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Home page
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="launchUri"
              placeholder="HTTPS or HTTP only for localhost"
              type="text"
              value="Mock field value"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Launch URI
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="termsAndConditionsUrl"
              placeholder="URL to link to your Terms and Conditions"
              type="text"
              value="Mock field value"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Terms and Conditions
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="privacyPolicyUrl"
              placeholder="URL to link to your Privacy Policy"
              type="text"
              value="Mock field value"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Privacy Policy
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="videoUrl1"
              placeholder="YouTube embed preferred or any https hosted video"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Getting Started Video URL
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="videoUrl2"
              placeholder="YouTube embed preferred or any https hosted video"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Why Use Us Video URL
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="pricingUrl"
              placeholder="URL to link to your Pricing Info"
              type="text"
              value="Mock field value"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Pricing Info
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="isFree"
              type="checkbox"
              value="Mock field value"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              This application is free
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="deletionProtection"
              type="checkbox"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Check to prevent app from being deleted
            </label>
          </div>
        </div>
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <label
              class="e1nbkkrq-el-label"
            >
              App Categories
            </label>
            <div
              class="eooz7jy-el-multi-select-input-wrapper"
            >
              <input
                class="eg4njbl-el-multi-select-input"
                id="app-edit-categories-select"
                value="Mock field value"
              />
              <div
                class="e12c6sou-el-multi-select-selected"
              >
                <span
                  class="e1el4z3b-el-ml2 emw1q1w-el-icon-size-medium ej9yrfo-el-icon"
                >
                  <svg />
                </span>
                <p>
                  Please select one or more categories that best describes your app. These will be used by customers to find your app in the AppMarket
                </p>
              </div>
              <div
                class="ef7odf0-el-multi-select-un-selected"
              >
                <input
                  class="e1wdkc9j-el-multi-select-checkbox"
                  id="test-static-id"
                  type="checkbox"
                />
                <label
                  class="ehgp5gp-el-has-grey-chips e1x92nc7-el-multi-select-label"
                  for="test-static-id"
                >
                  MOCK_DESCRIPTION
                </label>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="summary"
              placeholder="A short strapline summary for your app listing. Must be between 50 and 150 characters"
              value="Mock field value"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Summary
            </label>
          </div>
        </div>
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            Description
          </label>
          <div />
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div />
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div />
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div />
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div />
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div />
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <p
      class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
    >
      The detail included on this page populates your app listing in the AppMarket. While you are in development, you can complete this in your own time however, when you are ready to submit your app for approval, it all needs to be completed.
    </p>
    <p
      class="e11jaxfn-el-has-grey-text etrchfm-el-has-section-margin e1wasvgh-el-body-text"
    >
      For information on listing your app 
      <a>
        see here
      </a>
      . If you are looking for guidance on what we look for when reviewing app, there is a dedicated page
       
      <a>
        here.
      </a>
    </p>
    <div
      class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
    >
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="name"
            placeholder="The name of your app as it will appear to users"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Name
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="supportEmail"
            placeholder="Email for customers to contact you"
            type="email"
            value="Mock field value"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Support email
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="telephone"
            placeholder="Number for customers to contact you"
            type="text"
            value="Mock field value"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Telephone
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="homePage"
            placeholder="Your company homepage. HTTP:// or HTTPS://"
            type="text"
            value="Mock field value"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Home page
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="launchUri"
            placeholder="HTTPS or HTTP only for localhost"
            type="text"
            value="Mock field value"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Launch URI
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="termsAndConditionsUrl"
            placeholder="URL to link to your Terms and Conditions"
            type="text"
            value="Mock field value"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Terms and Conditions
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="privacyPolicyUrl"
            placeholder="URL to link to your Privacy Policy"
            type="text"
            value="Mock field value"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Privacy Policy
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="videoUrl1"
            placeholder="YouTube embed preferred or any https hosted video"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Getting Started Video URL
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="videoUrl2"
            placeholder="YouTube embed preferred or any https hosted video"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Why Use Us Video URL
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="pricingUrl"
            placeholder="URL to link to your Pricing Info"
            type="text"
            value="Mock field value"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Pricing Info
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="isFree"
            type="checkbox"
            value="Mock field value"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            This application is free
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="deletionProtection"
            type="checkbox"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Check to prevent app from being deleted
          </label>
        </div>
      </div>
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            App Categories
          </label>
          <div
            class="eooz7jy-el-multi-select-input-wrapper"
          >
            <input
              class="eg4njbl-el-multi-select-input"
              id="app-edit-categories-select"
              value="Mock field value"
            />
            <div
              class="e12c6sou-el-multi-select-selected"
            >
              <span
                class="e1el4z3b-el-ml2 emw1q1w-el-icon-size-medium ej9yrfo-el-icon"
              >
                <svg />
              </span>
              <p>
                Please select one or more categories that best describes your app. These will be used by customers to find your app in the AppMarket
              </p>
            </div>
            <div
              class="ef7odf0-el-multi-select-un-selected"
            >
              <input
                class="e1wdkc9j-el-multi-select-checkbox"
                id="test-static-id"
                type="checkbox"
              />
              <label
                class="ehgp5gp-el-has-grey-chips e1x92nc7-el-multi-select-label"
                for="test-static-id"
              >
                MOCK_DESCRIPTION
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="summary"
            placeholder="A short strapline summary for your app listing. Must be between 50 and 150 characters"
            value="Mock field value"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Summary
          </label>
        </div>
      </div>
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <label
          class="e1nbkkrq-el-label"
        >
          Description
        </label>
        <div />
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div />
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div />
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div />
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div />
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div />
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppListingTab should match a snapshot with errors and messages 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <p
        class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
      >
        The detail included on this page populates your app listing in the AppMarket. While you are in development, you can complete this in your own time however, when you are ready to submit your app for approval, it all needs to be completed.
      </p>
      <p
        class="e11jaxfn-el-has-grey-text etrchfm-el-has-section-margin e1wasvgh-el-body-text"
      >
        For information on listing your app 
        <a>
          see here
        </a>
        . If you are looking for guidance on what we look for when reviewing app, there is a dedicated page
         
        <a>
          here.
        </a>
      </p>
      <div
        class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
      >
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="name"
              placeholder="The name of your app as it will appear to users"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Name
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="supportEmail"
              placeholder="Email for customers to contact you"
              type="email"
            />
            <span
              class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
            >
              <svg />
            </span>
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Support email
            </label>
            <p
              class="e19twfs3-el-input-error"
            >
              An Error
            </p>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="telephone"
              placeholder="Number for customers to contact you"
              type="text"
            />
            <span
              class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
            >
              <svg />
            </span>
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Telephone
            </label>
            <p
              class="e19twfs3-el-input-error"
            >
              An Error
            </p>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="homePage"
              placeholder="Your company homepage. HTTP:// or HTTPS://"
              type="text"
            />
            <span
              class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
            >
              <svg />
            </span>
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Home page
            </label>
            <p
              class="e19twfs3-el-input-error"
            >
              An Error
            </p>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="launchUri"
              placeholder="HTTPS or HTTP only for localhost"
              type="text"
            />
            <span
              class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
            >
              <svg />
            </span>
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Launch URI
            </label>
            <p
              class="e19twfs3-el-input-error"
            >
              An Error
            </p>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="termsAndConditionsUrl"
              placeholder="URL to link to your Terms and Conditions"
              type="text"
            />
            <span
              class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
            >
              <svg />
            </span>
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Terms and Conditions
            </label>
            <p
              class="e19twfs3-el-input-error"
            >
              An Error
            </p>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="privacyPolicyUrl"
              placeholder="URL to link to your Privacy Policy"
              type="text"
            />
            <span
              class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
            >
              <svg />
            </span>
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Privacy Policy
            </label>
            <p
              class="e19twfs3-el-input-error"
            >
              An Error
            </p>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="videoUrl1"
              placeholder="YouTube embed preferred or any https hosted video"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Getting Started Video URL
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="videoUrl2"
              placeholder="YouTube embed preferred or any https hosted video"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Why Use Us Video URL
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="pricingUrl"
              placeholder="URL to link to your Pricing Info"
              type="text"
            />
            <span
              class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
            >
              <svg />
            </span>
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Pricing Info
            </label>
            <p
              class="e19twfs3-el-input-error"
            >
              An Error
            </p>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="isFree"
              type="checkbox"
            />
            <span
              class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
            >
              <svg />
            </span>
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              This application is free
            </label>
            <p
              class="e19twfs3-el-input-error"
            >
              An Error
            </p>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="deletionProtection"
              type="checkbox"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Check to prevent app from being deleted
            </label>
          </div>
        </div>
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <label
              class="e1nbkkrq-el-label"
            >
              App Categories
            </label>
            <div
              class="eooz7jy-el-multi-select-input-wrapper"
            >
              <input
                class="eg4njbl-el-multi-select-input"
                id="app-edit-categories-select"
              />
              <div
                class="e12c6sou-el-multi-select-selected"
              >
                <span
                  class="e1el4z3b-el-ml2 emw1q1w-el-icon-size-medium ej9yrfo-el-icon"
                >
                  <svg />
                </span>
                <p>
                  Please select one or more categories that best describes your app. These will be used by customers to find your app in the AppMarket
                </p>
              </div>
              <div
                class="ef7odf0-el-multi-select-un-selected"
              >
                <input
                  class="e1wdkc9j-el-multi-select-checkbox"
                  id="test-static-id"
                  type="checkbox"
                />
                <label
                  class="ehgp5gp-el-has-grey-chips e1x92nc7-el-multi-select-label"
                  for="test-static-id"
                >
                  MOCK_DESCRIPTION
                </label>
              </div>
            </div>
            <p
              class="e19twfs3-el-input-error"
            >
              An Error
            </p>
          </div>
        </div>
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="summary"
              placeholder="A short strapline summary for your app listing. Must be between 50 and 150 characters"
            />
            <span
              class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
            >
              <svg />
            </span>
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Summary
            </label>
            <p
              class="e19twfs3-el-input-error"
            >
              An Error
            </p>
          </div>
        </div>
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            Description
          </label>
          <div />
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div />
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div />
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div />
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div />
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div />
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div />
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <p
      class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
    >
      The detail included on this page populates your app listing in the AppMarket. While you are in development, you can complete this in your own time however, when you are ready to submit your app for approval, it all needs to be completed.
    </p>
    <p
      class="e11jaxfn-el-has-grey-text etrchfm-el-has-section-margin e1wasvgh-el-body-text"
    >
      For information on listing your app 
      <a>
        see here
      </a>
      . If you are looking for guidance on what we look for when reviewing app, there is a dedicated page
       
      <a>
        here.
      </a>
    </p>
    <div
      class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
    >
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="name"
            placeholder="The name of your app as it will appear to users"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Name
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="supportEmail"
            placeholder="Email for customers to contact you"
            type="email"
          />
          <span
            class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
          >
            <svg />
          </span>
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Support email
          </label>
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="telephone"
            placeholder="Number for customers to contact you"
            type="text"
          />
          <span
            class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
          >
            <svg />
          </span>
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Telephone
          </label>
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="homePage"
            placeholder="Your company homepage. HTTP:// or HTTPS://"
            type="text"
          />
          <span
            class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
          >
            <svg />
          </span>
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Home page
          </label>
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="launchUri"
            placeholder="HTTPS or HTTP only for localhost"
            type="text"
          />
          <span
            class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
          >
            <svg />
          </span>
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Launch URI
          </label>
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="termsAndConditionsUrl"
            placeholder="URL to link to your Terms and Conditions"
            type="text"
          />
          <span
            class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
          >
            <svg />
          </span>
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Terms and Conditions
          </label>
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="privacyPolicyUrl"
            placeholder="URL to link to your Privacy Policy"
            type="text"
          />
          <span
            class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
          >
            <svg />
          </span>
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Privacy Policy
          </label>
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="videoUrl1"
            placeholder="YouTube embed preferred or any https hosted video"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Getting Started Video URL
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="videoUrl2"
            placeholder="YouTube embed preferred or any https hosted video"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Why Use Us Video URL
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="pricingUrl"
            placeholder="URL to link to your Pricing Info"
            type="text"
          />
          <span
            class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
          >
            <svg />
          </span>
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Pricing Info
          </label>
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="isFree"
            type="checkbox"
          />
          <span
            class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
          >
            <svg />
          </span>
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            This application is free
          </label>
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="deletionProtection"
            type="checkbox"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Check to prevent app from being deleted
          </label>
        </div>
      </div>
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            App Categories
          </label>
          <div
            class="eooz7jy-el-multi-select-input-wrapper"
          >
            <input
              class="eg4njbl-el-multi-select-input"
              id="app-edit-categories-select"
            />
            <div
              class="e12c6sou-el-multi-select-selected"
            >
              <span
                class="e1el4z3b-el-ml2 emw1q1w-el-icon-size-medium ej9yrfo-el-icon"
              >
                <svg />
              </span>
              <p>
                Please select one or more categories that best describes your app. These will be used by customers to find your app in the AppMarket
              </p>
            </div>
            <div
              class="ef7odf0-el-multi-select-un-selected"
            >
              <input
                class="e1wdkc9j-el-multi-select-checkbox"
                id="test-static-id"
                type="checkbox"
              />
              <label
                class="ehgp5gp-el-has-grey-chips e1x92nc7-el-multi-select-label"
                for="test-static-id"
              >
                MOCK_DESCRIPTION
              </label>
            </div>
          </div>
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="summary"
            placeholder="A short strapline summary for your app listing. Must be between 50 and 150 characters"
          />
          <span
            class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
          >
            <svg />
          </span>
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Summary
          </label>
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <label
          class="e1nbkkrq-el-label"
        >
          Description
        </label>
        <div />
        <p
          class="e19twfs3-el-input-error"
        >
          An Error
        </p>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div />
        <p
          class="e19twfs3-el-input-error"
        >
          An Error
        </p>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div />
        <p
          class="e19twfs3-el-input-error"
        >
          An Error
        </p>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div />
        <p
          class="e19twfs3-el-input-error"
        >
          An Error
        </p>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div />
        <p
          class="e19twfs3-el-input-error"
        >
          An Error
        </p>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div />
        <p
          class="e19twfs3-el-input-error"
        >
          An Error
        </p>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div />
        <p
          class="e19twfs3-el-input-error"
        >
          An Error
        </p>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
